--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,25 +4,26 @@ ext.versions = [
 ]
 
 ext.libs = [
-        appcompat : "androidx.appcompat:appcompat:1.1.0",
-        coreKtx : "androidx.core:core-ktx:1.3.0",
-        constraintLayout :"androidx.constraintlayout:constraintlayout:1.1.3",
-        material : "com.google.android.material:material:1.1.0-alpha07",
+        appcompat                  : "androidx.appcompat:appcompat:1.1.0",
+        coreKtx                    : "androidx.core:core-ktx:1.3.0",
+        constraintLayout           :"androidx.constraintlayout:constraintlayout:1.1.3",
+        material                   : "com.google.android.material:material:1.1.0-alpha07",
         fragment                   : "androidx.fragment:fragment-ktx:1.2.4",
-        viewpager : "androidx.viewpager2:viewpager2:1.0.0",
+        viewpager                  : "androidx.viewpager2:viewpager2:1.0.0",
+        recyclerView               : "androidx.recyclerview:recyclerview:1.1.0",
 
         coroutines                 : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6",
 
         //Lifecycle
-        lifecycleViewModel : "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle",
+        lifecycleViewModel         : "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle",
         lifecycleLiveData          : "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle",
         lifecycleCompiler          : "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle",
-        lifecycleExtensions  : "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle",
+        lifecycleExtensions        : "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle",
 
 
 
         //Dagger
-        dagger : "com.google.dagger:dagger:$versions.dagger",
-        daggerCompiler :"com.google.dagger:dagger-compiler:$versions.dagger"
+        dagger                     : "com.google.dagger:dagger:$versions.dagger",
+        daggerCompiler             :"com.google.dagger:dagger-compiler:$versions.dagger"
 
 ]
