--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
         }
     }
 
-    compileOptions{
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -53,6 +53,8 @@ dependencies {
     implementation libs.lifecycleViewModel
     implementation libs.lifecycleLiveData
     implementation libs.lifecycleExtensions
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt libs.lifecycleCompiler
 
     api libs.dagger
@@ -65,11 +67,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 
+    implementation libs.roomRuntime
+    kapt libs.roomCompile
+    implementation libs.roomKtx
 
-    implementation "android.arch.persistence.room:runtime:1.0.0"
+    /*implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor  'android.arch.persistence.room:compiler:1.0.0'
-    kapt 'android.arch.persistence.room:compiler:1.0.0'
+    kapt 'android.arch.persistence.room:compiler:1.0.0'*/
 
 
 }
