--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation libs.roomRuntime
     kapt libs.roomCompile
     implementation libs.roomKtx
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     /*implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation 'android.arch.persistence.room:runtime:1.0.0'
