--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 29
@@ -57,8 +58,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt libs.lifecycleCompiler
 
-    api libs.dagger
-    kapt libs.daggerCompiler
+    implementation libs.daggerHilt
+    kapt libs.daggerHiltCompiler
+    implementation libs.daggerViewModel
+    kapt libs.daggerCompileViewModel
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0' //deprecated
 
