--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,13 +4,14 @@ ext.versions = [
         room : "2.3.0-alpha02"
 ]
 
-ext.libs = [
-        appcompat                  : "androidx.appcompat:appcompat:1.1.0",
+ext.libs = [ //'androidx.appcompat:appcompat:1.2.0' //1.0.2
+        appcompat                  : "androidx.appcompat:appcompat:1.2.0",
      //   coreKtx                    : "androidx.core:core-ktx:1.3.0",
-        coreKtx                    : "androidx.core:core-ktx:1.3.0",
-        constraintLayout           :"androidx.constraintlayout:constraintlayout:1.1.3",
-        material                   : "com.google.android.material:material:1.1.0-alpha07",
-        fragment                   : "androidx.fragment:fragment-ktx:1.2.4",
+        coreKtx                    : "androidx.core:core-ktx:1.3.2",
+           //  implementation 'androidx.constraintlayout:constraintlayout:2.0.4' //1.1.3
+        constraintLayout           :"androidx.constraintlayout:constraintlayout:2.0.4",
+        material                   : "com.google.android.material:material:1.2.1", //1.1.0-alpha07
+        fragment                   : "androidx.fragment:fragment-ktx:1.2.5", //1.2.4
         viewpager                  : "androidx.viewpager2:viewpager2:1.0.0",
         recyclerView               : "androidx.recyclerview:recyclerview:1.1.0",
 
@@ -30,11 +31,8 @@ ext.libs = [
         daggerViewModel                :"androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01",
         daggerCompileViewModel         :"androidx.hilt:hilt-compiler:1.0.0-alpha01",
 
-        //Room room : "2.2.5"
-//        roomRuntime                : "android.arch.persistence.room-runtime:$versions.room",
-  //      roomCompile                : "android.arch.persistence.room-compiler:$versions.room",
-        // optional - Kotlin Extensions and Coroutines support for Room
-    //    roomKtx                    : "androidx.room:room-ktx:$versions.room"
+
+        //ROOM
         roomRuntime                : "androidx.room:room-runtime:$versions.room",
         roomCompile                : "androidx.room:room-compiler:$versions.room",
         // optional - Kotlin Extensions and Coroutines support for Room
