--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,17 @@
 
 buildscript {
     apply from: "dependencies.gradle"
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.3.72' //1.2.50
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath 'com.android.tools.build:gradle:4.1.1' //3.5.3
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module dependencies files
     }
