--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,8 +16,15 @@ ext.libs = [ //'androidx.appcompat:appcompat:1.2.0' //1.0.2
         recyclerView               : "androidx.recyclerview:recyclerview:1.1.0",
 
         coroutines                 : "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6",
+        coroutinesCore             : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6",
 
-        //Lifecycle
+        //Retrofit
+        retrofit                   : "com.squareup.retrofit2:retrofit:2.6.0",
+        converter                  :"com.squareup.retrofit2:converter-gson:2.6.0",
+        retrofitCoroutines         :"com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2",
+
+
+             //Lifecycle
         lifecycleViewModel         : "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle",
         lifecycleLiveData          : "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle",
         lifecycleCompiler          : "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle",
